--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,12 @@
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@tanstack/react-query": "^5.87.1",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -30,6 +34,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-select": "^5.10.2",
+    "recharts": "^3.1.2",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
@@ -40,7 +45,7 @@
     "@types/country-list": "^2.1.4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.1.12",
     "@types/react-dom": "^19",
     "@types/react-select": "^5.0.1",
     "eslint": "^9",
